--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   margin: 0;
 }
 body{
+  background-color:rgb(234, 234, 235);
   font-size: 18px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
